tests/pass/array_initializer.kl
fn inisiu() {
    nter[2] array = [1, 2];
    mostra(array[0]);
    mostra(" ");
    mostra(array[1]);
    mostran();
}
